# barraqda

./: CMakeLists.txt  aboutdata.h  config-okular.h.cmake  metainfo.yaml  part.cpp
active/components/: pageitem.cpp
core/: annotations.h  area.cpp  area.h  document.cpp  document.h  document_p.h  documentcommands.cpp  documentcommands_p.h  observer.h  page.cpp  page.h  page_p.h  qdanodes.cpp  qdanodes.h  tagging.cpp  tagging.h  tagging_p.h  textpage.cpp  textpage.h  textpage_p.h
core/synctex/: synctex_parser_utils.c
generators/: CMakeLists.txt
generators/chm/kio-msits/: CMakeLists.txt
generators/plucker/: generator_plucker.h
generators/poppler/: generator_pdf.h
mobile/components/: CMakeLists.txt  pageitem.cpp
shell/: CMakeLists.txt  main.cpp  okular_main.cpp  org.kde.barraqda.appdata.xml  org.kde.barraqda.desktop  shell.cpp  shell.h  shell.rc
ui/: annotwindow.cpp  guiutils.cpp  guiutils.h  pagepainter.cpp  pagepainter.h  pageview.cpp  pageview.h  presentationwidget.cpp  taggingpopup.cpp  taggingpopup.h  taggingpropertiesdialog.cpp  taggingpropertiesdialog.h  taggingwidgets.cpp  taggingwidgets.h  taggingwindow.cpp  taggingwindow.h  thumbnaillist.cpp
ui/data/icons/: CMakeLists.txt  hisc-apps-barraqda.svgz
